[tool.poetry]
name = "feffery-antd-components"
version = "0.1.0"
description = "antd components in Dash"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
dash = "^1.21.0"

[tool.poetry.dev-dependencies]
dash-bootstrap-components = "^0.13.0"
pandas = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
