[tool.poetry]
name = "feffery-antd-components"
version = "0.1.0"
description = "antd components in Dash"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
dash-bootstrap-components = "^0.13.0"
pandas = "^1.3.2"
dash-react-force-graph = {git = "https://github.com/nodelab-aps/dash-react-force-graph.git", rev = "master"}
dash-extensions = "^0.0.65"
dash-daq = "^0.5.0"
dash = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
